--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruleta",
+  "name": "ruleta-fullstack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,7 +21,8 @@
     "fs-extra": "^8.0.1",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "nodemon": "^1.19.0"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
