--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "webpack": "^4.31.0"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
